feat: adds /me route
