# internal/infra/http/routes/customer.go
@@ -13,4 +13,5 @@ func setupCustomerRouter(router fiber.Router) {
 	auth := router.Group("/auth")
 	auth.Post("/register/customer", container.CustomerHandler.Register)
 	auth.Post("/login/customer", container.CustomerHandler.Login)
+	auth.Get("/me/customer", middlewares.EnsureAuth(), container.CustomerHandler.Me)
 }
